# Moon

./: .gitignore  LICENSE  MANIFEST.in  Makefile  README.md  pyproject.toml  requirements.txt  setup.py
.github/: CONTRIBUTING.md  README.md
.github/workflows/: pytest.yml
core/: __init__.py  main.py
docs/: DEVELOPMENT.md  Moonshot 5th Sep.pptx  SPEC_FUNC.md  SPEC_TECH.md  SYNTAX_SEMANTICS.md
examples/: fizz_buzz.mn  guess_game.mn  guess_game.moon  is_prime.mn
moon/: __init__.py  __main__.py  cli.py  interpreter.py  lexer.py  main.py  moon_ast.py  parser.py
moon/grammar/: moon.lark
tests/: conftest.py  test_interpreter.py  test_lexer.py  test_parser.py  test_sample.py
